--- a/README
+++ b/README
@@ -1,8 +1,7 @@
 veyepar - Video Eyeball Processor and Review
 
-Video metadata managre - given file names of raw footage, construct cut list (with human intervention), transcode, upload, anounce.
+Video metadata manager - given file names of raw footage, construct cut list (with human intervention), transcode, upload, announce.
 
 based on DebConf system
 
 authors: Carl Karsten <carl@personnelware.com>  
-	Cosmin Stejerean <cstejerean@gmail.com>
