bit more clue how to install

--- a/INSTALL
+++ b/INSTALL
@@ -2,8 +2,10 @@
 
 Figure out how to get the binaries installed to satify:
 
-import ImageFile # PIL
+pip install -r requirements.txt
 
+#!/usr/bin/python
+import ImageFile # PIL
 import pygtk
 pygtk.require ("2.0")
 import gobject
@@ -11,6 +13,6 @@ import pygst
 pygst.require ("0.10")
 import gst
 import gtk
-
 import pkg_resources
+
 
