--- a/INSTALL
+++ b/INSTALL
@@ -2,11 +2,14 @@
 
 Figure out how to get the binaries installed to satify:
 
+sudo apt-get install gstreamer0.10-plugins-good gstreamer0.10-plugins-bad gocr imagemagick python-imaging
+
 sudo apt-get install python-virtualenv
 sudo apt-get install mercurial
 hg clone http://bitbucket.org/ianb/pip/
 cd pip/
 python setup.py install
+cd ..
 
 pip install -r requirements.txt
 # fix broken dabo installer
