--- a/INSTALL
+++ b/INSTALL
@@ -34,3 +34,14 @@ http://kb.mozillazine.org/Links_to_local_pages_do_not_work#Firefox_1.5.2C_SeaMon
 user_pref("capability.policy.policynames", "localfilelinks");
 user_pref("capability.policy.localfilelinks.sites", "http://localhost:8080");
 user_pref("capability.policy.localfilelinks.checkloaduri.enabled", "allAccess");
+
+# this is lame...
+# and untested.
+cd utils
+mkdir static
+cd static
+wget -N http://0x80.org/wordlist/webster-dictionary.txt
+ln -s webster-dictionary.txt dictionary.txt
+cd ../../dj/scripts
+ln -s ../../utils/gsocr.py 
+ln -s ../../utils/static 
