--- a/INSTALL
+++ b/INSTALL
@@ -34,6 +34,7 @@ ln -s webster-dictionary.txt dictionary.txt
 
 cd ..
 cp pw_samp.py pw.py
+cp sample_veyepar.cfg veyepar.cfg
 
 # either install apache or some other http server and figure out how to enable seeking in ogv, or allow file:// access to the local files:
 http://kb.mozillazine.org/Links_to_local_pages_do_not_work#Firefox_1.5.2C_SeaMonkey_1.0_and_newer  "Disabling the Security Check" 
