--- a/INSTALL
+++ b/INSTALL
@@ -9,7 +9,7 @@ deb-src http://ppa.launchpad.net/sunab/sunab2/ubuntu lucid main
 deb http://ppa.launchpad.net/j/ppa/ubuntu karmic main 
 deb-src http://ppa.launchpad.net/j/ppa/ubuntu karmic main 
 
-sudo apt-get install gstreamer0.10-plugins-good gstreamer0.10-plugins-bad gocr imagemagick python-imaging python-reportlab python-virtualenv mercurial subversion inkscape melt ffmpeg2theora mplayer vlc
+sudo apt-get install gstreamer0.10-plugins-good gstreamer0.10-plugins-bad gocr imagemagick python-imaging python-reportlab python-virtualenv mercurial subversion inkscape melt ffmpeg2theora mplayer vlc git vim
 
 virtualenv veyepar
 cd veyepar
