--- a/INSTALL
+++ b/INSTALL
@@ -1,13 +1,8 @@
 # Veyepar instalation notes
 
-sudo vi /etc/apt/sources.list
-# add these lines:
-deb http://ppa.launchpad.net/gstreamer-developers/ppa/ubuntu lucid main 
-deb-src http://ppa.launchpad.net/gstreamer-developers/ppa/ubuntu lucid main 
-deb http://ppa.launchpad.net/sunab/sunab2/ubuntu lucid main 
-deb-src http://ppa.launchpad.net/sunab/sunab2/ubuntu lucid main 
-deb http://ppa.launchpad.net/j/ppa/ubuntu karmic main 
-deb-src http://ppa.launchpad.net/j/ppa/ubuntu karmic main 
+sudo apt-add-repository ppa:gstreamer-developers/ppa
+sudo apt-add-repository ppa:sunab/kdenlive-svn
+sudo apt-add-repository ppa:j/ppa
 
 sudo apt-get install gstreamer0.10-plugins-good gstreamer0.10-plugins-bad gocr imagemagick python-imaging python-reportlab python-virtualenv mercurial subversion inkscape melt ffmpeg2theora mplayer vlc git vim
 
@@ -39,7 +34,8 @@ cp sample_veyepar.cfg veyepar.cfg
 # either install apache or some other http server and figure out how to enable seeking in ogv, or allow file:// access to the local files:
 http://kb.mozillazine.org/Links_to_local_pages_do_not_work#Firefox_1.5.2C_SeaMonkey_1.0_and_newer  "Disabling the Security Check" 
 
-# use set_ff_prefs.py to add these lines to FireFox config 
+python set_ff_prefs.py
+# adds these lines to FireFox config 
 user_pref("capability.policy.policynames", "localfilelinks");
 user_pref("capability.policy.localfilelinks.sites", "http://localhost:8080");
 user_pref("capability.policy.localfilelinks.checkloaduri.enabled", "allAccess");
