--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,3 @@
 
-add fields to client, show and episode: tags
-add field to client: blip account name
-account user/pw management
+add sound to tests
 
