--- a/TODO.txt
+++ b/TODO.txt
@@ -18,3 +18,7 @@ dvswitch:
   everything: default host/port
   dvsource-dvgrab - save unmixed stream
   dvsink-file - default file name
+
+veyepar:
+  split long talk (tutorials) into parts.
+
