--- a/TODO.txt
+++ b/TODO.txt
@@ -1,8 +1,6 @@
 
 next/prev (match recording sheet: same room/day)
 
-json etc links to show page that give url's.
-
 recording sheets
   date in yyyy-mm-dd format too (same as dv file dir name)
   date in DOW, date, Month
@@ -12,11 +10,11 @@ recording sheets
 dvswitch:
   everything: default host/port
   dvsource-dvgrab - save unmixed stream
-  dvsink-file - default file name: yyyy-mm-ddd/hh-mm-ss.i.dv
+  dvsink-file - default file name: yyyy-mm-ddd/hh_mm_ss.i.dv
 
 veyepar:
   split long talk (tutorials) into parts.
 
 encoding:
-  fade audio in out
   soften jump cuts
+  credits - hold for a few seconds at end.
