--- a/TODO.txt
+++ b/TODO.txt
@@ -12,6 +12,8 @@ dvswitch:
   dvsource-dvgrab - save unmixed stream
   dvsink-file - default file name: yyyy-mm-ddd/hh_mm_ss.i.dv
 
+run sink-playdv on slave as a monitor for cam op.
+
 veyepar:
   split long talk (tutorials) into parts.
 
@@ -24,3 +26,5 @@ ndv walpaper
 upload:
   grab blip rss for episode
   upload to youtube
+
+
