tags camel case presenter names

--- a/TODO.txt
+++ b/TODO.txt
@@ -15,6 +15,9 @@ encoding:
   soften jump cuts
   credits - hold for a few seconds at end.
 
+model:
+  location.channel_copy
+
 ndv walpaper 
 
 upload:
