--- a/TODO.txt
+++ b/TODO.txt
@@ -10,6 +10,15 @@ run sink-playdv on slave as a monitor for cam op.
 veyepar:
   next/prev (match recording sheet: same room/day)
   split long talk (tutorials) into parts.
+  error handeling:
+      log error, continue with next episode. 
+      encode errors:   
+        inkscape svg/png fail
+        input files missing
+        encoder fail
+
+  command line parameter to set cfg file.
+    test script has it's own cfg
 
 encoding:
   soften jump cuts
