--- a/setup/pxe/TODO.txt
+++ b/setup/pxe/TODO.txt
@@ -4,3 +4,7 @@
 make a script that just reads them to warm up a fresh cache. This will be quicker than runing a full install.  Used when the installs are done witout a bordband connection: take the server to somewhere with a good connection, warm up cache, move server back to the Internet deseart. 
 
 3. split out ddns setup.  people want that without the pxe and carl's install scripts.
+
+4. nfs mounts for server:/Video or something.
+
+
