episode state picker now at bottom of form too

--- a/TODO.txt
+++ b/TODO.txt
@@ -40,6 +40,7 @@ ndv walpaper
 
 recording sheets:
  [x] over time (adjust before addeps to suck in the extras)
+ hostname:____
 
 live cd: mainly for slave
   user in video group
