--- a/TODO.txt
+++ b/TODO.txt
@@ -86,4 +86,17 @@ title screen preview
 dvswitch process management:
   bug people:
   Tim A to fix Kill button
-  Ryan V to make sure he has updated his scripts to use _ in dv filenames
+  Ryan V 
+     get scripts propperly checked into veyepr repo
+     make sure his scripts to use _ in dv filenames
+
+for unit tests:
+  get sphinx or some such speach recognition packaged and in a PPA
+    sphinx2-bin fell out of the ubuntu repos due to not being maintained.
+    state of the art is not a requirement
+    it just needs to recognize a simple phrase, like
+       "go forward 10 meeters"   
+    which gets encoded and demuxed back out 
+    to make sure the encoder didn't muck it up.
+    
+
