--- a/TODO.txt
+++ b/TODO.txt
@@ -8,6 +8,7 @@ client checklist:
   slide show for between talks
   title slide for videos
   room access times
+  internet access
 
 dvswitch:
   everything: default host/port
@@ -55,6 +56,7 @@ veyepar:
       archive: not sure there is a UI for people to use, so dooesn't matter  
       richard: 
         state:2 api is broken.
+        html-atize desceription.
 
 encoding:
   soften jump cuts
